--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "express": "^4.16.4",
+    "hbs": "^4.0.1",
     "request": "^2.88.0",
     "yargs": "^12.0.5"
   },
